// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IconButton matches snapshot as Link FAB 1`] = `
<div>
  <a
    aria-label="Create workout list"
    class="iconButton primary circle lg"
    data-headlessui-state=""
    href="/create"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </a>
</div>
`;

exports[`IconButton matches snapshot for default 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton ghost square md"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for disabled 1`] = `
<div>
  <button
    aria-label="Disabled"
    class="iconButton ghost square md"
    data-disabled=""
    data-headlessui-state="disabled"
    disabled=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for ghost / circle / lg 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton ghost circle lg"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for ghost / circle / md 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton ghost circle md"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for ghost / circle / sm 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton ghost circle sm"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for ghost / square / lg 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton ghost square lg"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for ghost / square / md 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton ghost square md"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for ghost / square / sm 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton ghost square sm"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for primary / circle / lg 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton primary circle lg"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for primary / circle / md 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton primary circle md"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for primary / circle / sm 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton primary circle sm"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for primary / square / lg 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton primary square lg"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for primary / square / md 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton primary square md"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot for primary / square / sm 1`] = `
<div>
  <button
    aria-label="Action"
    class="iconButton primary square sm"
    data-headlessui-state=""
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;

exports[`IconButton matches snapshot with title 1`] = `
<div>
  <button
    aria-label="Export"
    class="iconButton ghost square md"
    data-headlessui-state=""
    title="Export workout lists"
    type="button"
  >
    <svg
      aria-hidden="true"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </button>
</div>
`;
